hphp/test/zend/good/tests/classes/static_this.php.expectf
Fatal error: Don't use $this in a static method, use static:: instead in %s/static_this.php on line 12
